canvio en login y registro

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="50dp"
-            android:text="Hi there! Nice to see you again."
+            android:text="@string/hello_message"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -35,7 +35,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="50dp"
-            android:text="Sign In"
+            android:text="@string/sign_in"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
-            android:text="Email"
+            android:text="@string/email"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="25dp"
-            android:text="AGENDA"
+            android:text="@string/agenda"
             android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="50dp"
-            android:text="Password"
+            android:text="@string/password"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:ems="10"
-            android:hint="password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +116,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="50dp"
             android:backgroundTint="@color/fontMain"
-            android:text="Sing In"
+            android:text="@string/sing_in_button"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
-            android:text="Recuerdame"
+            android:text="@string/remember_me"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -141,7 +141,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
-            android:text="Forgot Password ?"
+            android:text="@string/forgot_password"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -155,7 +155,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:ems="10"
-            android:hint="example@gmail.com"
+            android:hint="@string/example_email"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -194,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="0dp"
                 android:backgroundTint="@color/fontMain"
-                android:text="Sing Up"
+                android:text="@string/sing_up_button"
                 app:cornerRadius="10dp" />
 
             <Button
@@ -202,7 +202,7 @@
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/btnGoogle"
-                android:text="G Google"
+                android:text="@string/google_button"
                 app:cornerRadius="10dp" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
