--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -101,7 +101,7 @@
             app:layout_constraintTop_toBottomOf="@+id/anadirmail" />
 
         <CheckBox
-            android:id="@+id/cbRemember"
+            android:id="@+id/terminos"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="50dp"
@@ -145,7 +145,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cbRemember" />
+            app:layout_constraintTop_toBottomOf="@+id/terminos" />
 
         <TextView
             android:id="@+id/textView7"
