--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -52,7 +52,7 @@
         android:id="@+id/calendar"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        android:background="@color/white"
+        style="@style/CalendariViewStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lineaGris" />
