--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -49,7 +49,7 @@
         app:srcCompat="@drawable/ic_menu" />
 
     <ImageButton
-        android:id="@+id/btnañadir"
+        android:id="@+id/btnanadir"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:backgroundTint="#00FFFFFF"
@@ -78,7 +78,7 @@
         android:textAlignment="viewStart"
         android:textColor="@color/fontMain"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnañadir"
+        app:layout_constraintEnd_toStartOf="@+id/btnanadir"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendar" />
