--- a/app/src/main/res/layout/dialog_afegir_esdeveniment.xml
+++ b/app/src/main/res/layout/dialog_afegir_esdeveniment.xml
@@ -13,8 +13,8 @@
             android:id="@+id/editTextTitol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Títol de la tasca"
-            android:inputType="text"/>
+            android:hint="Títol del esdeveniment"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/editTextDescripcio"
@@ -29,39 +29,54 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Data límit:"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            android:text="Data Inici:" />
 
         <TextView
             android:id="@+id/textViewDataLimit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Toca per seleccionar la data"
+            android:layout_marginTop="4dp"
             android:background="#EEEEEE"
             android:padding="8dp"
-            android:layout_marginTop="4dp"/>
+            android:text="Selecciona data" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Activar recordatori:"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            android:text="Data Finalització:" />
+
+        <TextView
+            android:id="@+id/textviewFinalitzacio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="#EEEEEE"
+            android:padding="8dp"
+            android:text="Selecciona data finalització" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Data Recordatori:" />
 
         <TextView
             android:id="@+id/textviewRecordatori"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Toca per seleccionar data de recordatorio"
+            android:layout_marginTop="4dp"
             android:background="#EEEEEE"
             android:padding="8dp"
-            android:layout_marginTop="4dp"/>
+            android:text="Selecciona recordatori" />
 
 
         <Button
-            android:id="@+id/buttonGuardarTasca"
+            android:id="@+id/buttonGuardarEsdeveniment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Guardar"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:text="Guardar" />
     </LinearLayout>
 </ScrollView>
