--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
             android:layout_marginStart="50dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="50dp"
@@ -178,11 +178,11 @@
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="50dp"
             android:gravity="center"
             android:orientation="horizontal"
+            android:paddingLeft="-10dp"
+            android:paddingRight="-10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -190,19 +190,24 @@
 
             <Button
                 android:id="@+id/btnSingUp"
-                android:layout_width="140dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="10dp"
                 android:backgroundTint="@color/fontMain"
                 android:text="@string/sing_up_button"
+                android:textSize="12sp"
                 app:cornerRadius="10dp" />
 
             <Button
                 android:id="@+id/btnGoogle"
-                android:layout_width="140dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="60dp"
                 android:backgroundTint="@color/btnGoogle"
                 android:text="@string/google_button"
+                android:textSize="12sp"
                 app:cornerRadius="10dp" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
