--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-            tools:srcCompat="@drawable/ic_launcher_background" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <!-- Campos de Entrada -->
         <TextView
