--- a/app/src/main/res/layout/dialog_afegir_tasca.xml
+++ b/app/src/main/res/layout/dialog_afegir_tasca.xml
@@ -56,6 +56,18 @@
             android:padding="8dp"
             android:layout_marginTop="4dp"/>
 
+        <TextView
+            android:id="@+id/textviewEstado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estado"
+            android:layout_marginTop="12dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerEstat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"/>
 
         <Button
             android:id="@+id/buttonGuardarTasca"
