--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -146,7 +146,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
-        android:text="Vincular cuenta de Google"
+        android:text="Vincular calendario de Google"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
