Fix Check Alertas

--- a/app/src/main/res/layout/fragment_alerts.xml
+++ b/app/src/main/res/layout/fragment_alerts.xml
@@ -60,6 +60,7 @@
         android:id="@+id/btnMarkAllRead"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
         app:layout_constraintEnd_toEndOf="@+id/imageButton3"
         app:layout_constraintStart_toStartOf="@+id/imageButton3"
