eventos notificaciones no va

--- a/app/src/main/res/layout/list_item_alert.xml
+++ b/app/src/main/res/layout/list_item_alert.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="4dp"
             android:textSize="13sp"
             android:textColor="#666666"
-            android:visibility="gone" />
+            android:visibility="visible" />
     </LinearLayout>
 
     <ImageView
