--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -66,17 +66,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
+        <!-- Campos de Entrada -->
         <ImageView
             android:id="@+id/profileicon"
-            android:layout_width="203dp"
+            android:layout_width="200dp"
             android:layout_height="175dp"
-            android:layout_marginTop="56dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:layout_constraintVertical_bias="0.13999999"
+            tools:srcCompat="@tools:sample/avatars"
+            android:background="#FF0000"/>
 
-        <!-- Campos de Entrada -->
         <TextView
             android:id="@+id/viewname"
             android:layout_width="wrap_content"
@@ -89,7 +91,7 @@
             android:id="@+id/editname"
             android:layout_width="270dp"
             android:layout_height="50dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="50dp"
             android:editable="false"
             android:enabled="false"
             android:inputType="text"
@@ -133,6 +135,7 @@
             android:layout_width="270dp"
             android:layout_height="50dp"
             android:layout_marginTop="36dp"
+            android:layout_marginBottom="50dp"
             android:editable="false"
             android:enabled="false"
             android:inputType="phone"
