--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="50dp"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:ems="10"
-            android:hint="Your Password"
+            android:hint="@string/your_password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -52,7 +52,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="50dp"
             android:ems="10"
-            android:hint="Your email address"
+            android:hint="@string/your_email_address"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -66,7 +66,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:ems="10"
-            android:hint="Your Name"
+            android:hint="@string/your_name"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
-            android:text="Email"
+            android:text="@string/email_cambio"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -93,7 +93,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="50dp"
-            android:text="Password"
+            android:text="@string/password"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -107,7 +107,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
-            android:text="I agree to the Terms of Services and Privacy Policy."
+            android:text="@string/i_agree_to_the_terms_of_services_and_privacy_policy"
             android:textAlignment="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -123,7 +123,7 @@
             android:clickable="true"
             android:focusable="true"
             android:fontFamily="sans-serif-medium"
-            android:text="Have an a Account ? Sign In"
+            android:text="@string/have_an_a_account_sign_in"
             android:textAlignment="center"
             android:textColor="@color/lightGray"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -140,7 +140,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="50dp"
             android:backgroundTint="@color/fontMain"
-            android:text="Continue"
+            android:text="continue"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -154,7 +154,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
-            android:text="Name"
+            android:text="@string/nombre"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
-            android:text="Password"
+            android:text="@string/password"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -180,7 +180,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:ems="10"
-            android:hint="Confirm your Password"
+            android:hint="@string/confirm_your_password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
