--- a/app/src/main/res/layout/dialog_afegir_esdeveniment.xml
+++ b/app/src/main/res/layout/dialog_afegir_esdeveniment.xml
@@ -13,14 +13,14 @@
             android:id="@+id/editTextTitol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Títol del esdeveniment"
+            android:hint="@string/t_tol_del_esdeveniment"
             android:inputType="text" />
 
         <EditText
             android:id="@+id/editTextDescripcio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Descripció"
+            android:hint="@string/descripci"
             android:inputType="textMultiLine"
             android:minLines="2"
             android:gravity="top"
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Data Inici:" />
+            android:text="@string/data_inici" />
 
         <TextView
             android:id="@+id/textViewDataLimit"
@@ -39,13 +39,13 @@
             android:layout_marginTop="4dp"
             android:background="#EEEEEE"
             android:padding="8dp"
-            android:text="Selecciona data" />
+            android:text="@string/toca_per_seleccionar_la_data" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Data Finalització:" />
+            android:text="@string/data_finalitzaci" />
 
         <TextView
             android:id="@+id/textviewFinalitzacio"
@@ -54,13 +54,13 @@
             android:layout_marginTop="4dp"
             android:background="#EEEEEE"
             android:padding="8dp"
-            android:text="Selecciona data finalització" />
+            android:text="@string/toca_per_seleccionar_la_data" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Data Recordatori:" />
+            android:text="@string/activar_recordatori" />
 
         <TextView
             android:id="@+id/textviewRecordatori"
@@ -69,7 +69,7 @@
             android:layout_marginTop="4dp"
             android:background="#EEEEEE"
             android:padding="8dp"
-            android:text="Selecciona recordatori" />
+            android:text="@string/toca_per_seleccionar_la_data" />
 
 
         <Button
