--- a/app/src/main/res/layout/drawer_menu_layout.xml
+++ b/app/src/main/res/layout/drawer_menu_layout.xml
@@ -73,7 +73,7 @@
         android:layout_width="64dp"
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
-        android:text="Perfil >"
+        android:text="@string/perfil_menu"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@id/profileicon"
         app:layout_constraintStart_toEndOf="@id/profileicon"
@@ -94,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Calendario >"
+        android:text="@string/calendario_menu"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@id/calendaricon"
         app:layout_constraintStart_toEndOf="@id/calendaricon"
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="Alertas >"
+        android:text="@string/alertas_menu"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@id/alertasicon"
         app:layout_constraintStart_toEndOf="@id/alertasicon"
