--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -13,7 +13,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
-        android:text="Eliminar Cuenta !"
+        android:text="@string/eliminar_cuenta"
         android:textColor="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,7 +37,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
-        android:text="Cerrar Session"
+        android:text="@string/cerrar_session"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
-        android:text="Idioma : ESPAÑOL "
+        android:text="@string/idioma_espa_ol"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
         android:layout_height="60dp"
         android:fontFamily="sans-serif-medium"
         android:paddingTop="20dp"
-        android:text="Configuración"
+        android:text="@string/configuraci_n"
         android:textAlignment="center"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/imageButton3"
@@ -134,7 +134,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
-        android:text="Tema : CLARO"
+        android:text="tema_claro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lineaGris" />
@@ -146,7 +146,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
-        android:text="Vincular calendario de Google"
+        android:text="@string/vincular_calendario_de_google"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
