--- a/app/src/main/res/layout/activity_recover_pass.xml
+++ b/app/src/main/res/layout/activity_recover_pass.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="50dp"
-            android:text="Account Recovery"
+            android:text="@string/account_recovery"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="50dp"
-            android:text="Email"
+            android:text="@string/email_cambio"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
             android:layout_marginTop="180dp"
             android:layout_marginEnd="50dp"
             android:backgroundTint="@color/fontMain"
-            android:text="Send Recovery Mail"
+            android:text="@string/send_recovery_mail"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -94,7 +94,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="50dp"
-            android:text="Debe esperar 5 minutos antes de enviar otro correo."
+            android:text="@string/debe_esperar_5_minutos_antes_de_enviar_otro_correo"
             android:textAlignment="center"
             android:textColor="@color/lightGray"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="80dp"
-            android:text="Ya tienes cuenta ? Inicia sesión !"
+            android:text="@string/ya_tienes_cuenta_inicia_sesi_n"
             android:textAlignment="center"
             android:clickable="true"
             android:focusable="true"
