--- a/app/src/main/res/layout/fragment_alerts.xml
+++ b/app/src/main/res/layout/fragment_alerts.xml
@@ -21,7 +21,7 @@
         android:layout_height="60dp"
         android:fontFamily="sans-serif-medium"
         android:paddingTop="20dp"
-        android:text="Alertas"
+        android:text="@string/alertas"
         android:textAlignment="center"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/imageButton3"
