--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -76,8 +76,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             app:layout_constraintVertical_bias="0.13999999"
-            tools:srcCompat="@tools:sample/avatars"
-            android:background="#FF0000"/>
+            app:srcCompat="@drawable/ic_profile" />
 
         <TextView
             android:id="@+id/viewname"
