--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -59,14 +59,24 @@
         app:layout_constraintTop_toBottomOf="@+id/calendar"
         app:srcCompat="@drawable/ic_add" />
 
-    <CalendarView
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/calendar"
-        style="@style/CalendariViewStyle"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@+id/lineaGris"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lineaGris" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnanadir"
+
+        app:mcv_tileSize="48dp"
+        app:mcv_showOtherDates="all"
+        app:mcv_headerTextAppearance="@style/CalendarTitle"
+        app:mcv_weekDayTextAppearance="@style/CalendarWeekDay"
+        app:mcv_dateTextAppearance="@style/CalendarDate"/>
+
+
+
 
     <TextView
         android:id="@+id/txtDay"
@@ -89,10 +99,10 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnanadir"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnanadir"
         tools:listitem="@layout/list_item_calendar_item" />
 
 
